<resources>
    <string name="app_name">SubmissionStoryApp</string>
    <string name="logo">logo</string>
    <string name="title">Bicarakan Indonesia</string>
    <string name="sub_title">Mental Health Service</string>
    <string name="desc">Sebuah platform untuk tempat bercerita tentang berbagai masalah dalam hubungan, kecemasan, seksualitas, insecurity, dan emosi. Semua akan ditangani oleh psikolog yang profesional. Semua cerita akan kami simpan dengan baik</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="close">Close</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="desc_login">Yuk segera masuk dan temukan solusi yang tepat untuk permasalahan kamu</string>
    <string name="desc_signup">Kamu masih lagi ada masalah dalam hubungan, insecure, atau emosi? \nSilahkan coba daftar dan temukan solusi bersama psikolog terbaik kamu.</string>
    <string name="name">Nama</string>

    <string name="error">Error</string>
    <string name="error_null_email">Harap mengisi Email terlebih dahulu</string>
    <string name="error_null_pass">Harap mengisi Password terlebih dahulu</string>
    <string name="error_null_story">Harap mengisi Deskripsi Cerita terlebih dahulu</string>
    <string name="error_null_photo">Harap mengambil gambar terlebih dahulu</string>
    <string name="error_char_pass">Password tidak boleh kurang dari 6 karakter</string>
    <string name="error_char_email">Harap mengisi dengan format email yang benar</string>
    <string name="error_null_name">Harap mengisi Nama terlebih dahulu</string>
    <string name="error_permission">Tidak mendapatkan permission.</string>
    <string name="error_camera">Gagal memunculkan kamera</string>
    <string name="desc_home">Bicarakan isi hatimu, temukan jalan keluar atas permasalahanmu.</string>
    <string name="halo_name">Halo %1$s,</string>
    <string name="story">Story</string>
    <string name="cerita_baru">Cerita Baru</string>
    <string name="created_on">Dibuat pada tanggal :</string>
    <string name="deskripsi">Deskripsi :</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galleri</string>
    <string name="desc_story">Deskripsi Cerita</string>
    <string name="upload">Upload</string>
    <string name="new_story">New Story</string>
    <string name="switchCamera">Ganti kamera depan dan belakang</string>
    <string name="captureImage">Tombol ambil gambar</string>
    <string name="empty_story">Belum ada cerita, silahkan menambahkan cerita baru</string>
    <string name="success_story">Story berhasil diupload</string>
    <string name="intent_chooser">Choose a Picture</string>
    <string name="hint_pass">Masukkan password</string>
    <string name="hint_email">Masukkan Email</string>
    <string name="hint_name">Masukkan Nama</string>
    <string name="double_back">Please click BACK again to exit</string>
    <string name="loading">Loading…</string>
    <string name="map">Map</string>
    <string name="view_map">View on map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Retry</string>
</resources>