<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.newstory.NewStoryActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/new_story"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold"
        android:transitionName="name"
        app:layout_constraintStart_toEndOf="@id/iv_back"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_story"
                android:layout_width="240dp"
                android:layout_height="320dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/logo"
                android:scaleType="fitCenter"
                android:src="@drawable/image_loading_placeholder"
                android:transitionName="picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/blue"
                android:text="@string/camera"
                android:textAllCaps="false"
                app:layout_constraintEnd_toStartOf="@id/guidelineVertical"
                app:layout_constraintTop_toBottomOf="@id/iv_story" />

            <Button
                android:id="@+id/btn_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/blue"
                android:text="@string/gallery"
                android:textAllCaps="false"
                app:layout_constraintStart_toEndOf="@id/guidelineVertical"
                app:layout_constraintTop_toBottomOf="@id/iv_story" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineVertical"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_story"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:counterEnabled="true"
                app:counterMaxLength="255"
                app:helperText="Required*"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_camera">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_story"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/desc_story"
                    android:inputType="textMultiLine"
                    android:maxLength="255" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_upload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/blue"
                android:text="@string/upload"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@id/btn_gallery"
                app:layout_constraintStart_toStartOf="@id/btn_camera"
                app:layout_constraintTop_toBottomOf="@id/til_story" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>